--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aplicación Hola Mundo con Express para práctica DevOps",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
+    "start": "node src/server.js",
     "test": "jest"
   },
   "keywords": [],
@@ -18,4 +18,3 @@
     "supertest": "^6.3.3"
   }
 }
-
