--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,40 +1,47 @@
-name: CI/CD
+name: CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-  build-and-push:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Clonar el repositorio
-      - name: Checkout code
+      # 1. Clonar el repositorio
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 2️⃣ Configurar Node.js
-      - name: Set up Node.js
+      # 2. Configurar Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: "18"
 
-      # 3️⃣ Instalar dependencias
+      # 3. Instalar dependencias
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
-      # 4️⃣ Ejecutar tests
+      # 4. Correr tests
       - name: Run tests
         run: npm test
 
-      # 5️⃣ Construir imagen Docker
+      # 5. Login a Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # 6. Build de la imagen Docker
       - name: Build Docker image
         run: docker build -t willian28/hola-mundo-app:latest .
 
-      # 6️⃣ Login seguro a Docker Hub usando secrets
-      - name: Log in to Docker Hub
-        run: echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-
-      # 7️⃣ Subir la imagen a Docker Hub
+      # 7. Push de la imagen Docker
       - name: Push Docker image
         run: docker push willian28/hola-mundo-app:latest
